gateway/1.8/modules/ROOT/nav.adoc
* xref:index.adoc[Overview]
** xref:flex-review-prerequisites.adoc[Requirements and Limits]
** xref:flex-sizing-guide.adoc[Resource Sizing]
* xref:flex-gateway-release-notes.adoc[Release Notes]
* xref:flex-architecture-overview.adoc[]
** xref:flex-architecture-basic-deployments.adoc[]
** xref:flex-architecture-uc-overview.adoc[]
*** xref:flex-architecture-uc1.adoc[]
*** xref:flex-architecture-uc2.adoc[]
*** xref:flex-architecture-uc3.adoc[]
*** xref:flex-architecture-uc4.adoc[]
** xref:flex-architecture-multi-region.adoc[]
** xref:flex-architecture-shared-storage.adoc[]
* xref:flex-gateway-getting-started.adoc[]
* xref:flex-gateway-k8-getting-started.adoc[]
* xref:flex-gateway-set-up.adoc[]
** xref:flex-install.adoc[Download Flex Gateway]
** xref:flex-conn-reg-run.adoc[Register and Run in Connected Mode]
*** xref:flex-conn-reg-run-up.adoc[With a Username and Password]
*** xref:flex-conn-reg-run-app.adoc[With a Connected App]
*** xref:flex-conn-reg-run-token.adoc[With a Token]
** xref:flex-local-reg-run.adoc[Register and Run in Local Mode]
*** xref:flex-local-reg-run-up.adoc[With a Username and Password]
*** xref:flex-local-reg-run-app.adoc[With a Connected App]
*** xref:flex-local-reg-run-token.adoc[With a Token]
* xref:flex-gateway-configure.adoc[]
** xref:flex-conn-configure.adoc[]
*** xref:flex-conn-rep-run.adoc[Configure Replicas]
*** xref:flex-conn-tls-config.adoc[Configure TLS Context]
*** xref:flex-conn-shared-storage-config.adoc[Configure Shared Storage]
*** xref:flex-conn-forward-proxy.adoc[Configure a Forward Proxy]
*** xref:flex-conn-manage-public-api.adoc[Configure with the API Manager API Tool]
*** xref:flex-conn-readiness-liveness.adoc[Configure a Readiness or Liveness Probe]
*** xref:flex-conn-proxy-protocol.adoc[Configure PROXY Protocol]
*** xref:flex-conn-jenkins-api.adoc[Automate Flex Gateway with a Jenkins Pipeline using the API Manager API]
*** xref:flex-conn-jenkins-cli.adoc[Automate Flex Gateway with a Jenkins Pipeline using Anypoint CLI]
** xref:flex-local-configure.adoc[]
*** xref:flex-local-rep-run.adoc[Configure Replicas]
*** xref:flex-local-tls-config.adoc[Configure TLS Context]
*** xref:flex-local-shared-storage-config.adoc[Configure Shared Storage]
*** xref:flex-local-forward-proxy.adoc[Configure a Forward Proxy]
*** xref:flex-local-readiness-liveness.adoc[Configure a Readiness or Liveness Probe]
*** xref:flex-local-proxy-protocol.adoc[Configure PROXY Protocol]
*** xref:flex-local-configuration-reference-guide.adoc[Declarative Configuration Reference]
* xref:flex-gateway-publish-apis.adoc[]
** xref:flex-gateway-publish-apis-conn.adoc[]
** xref:flex-gateway-publish-apis-local.adoc[]
*** xref:flex-local-publish-simple-api.adoc[Publish a Simple API]
*** xref:flex-local-publish-api-multiple-services.adoc[Publish an API with Multiple Upstream Services]
* xref:flex-gateway-secure-apis.adoc[]
** xref:policies-included-directory.adoc[Included Inbound Policies Directory]
*** xref:policies-included-basic-auth-ldap.adoc[Basic Authentication: LDAP]
*** xref:policies-included-basic-auth-simple.adoc[Basic Authentication: Simple]
*** xref:policies-included-client-id-enforcement.adoc[Client ID Enforcement]
*** xref:policies-included-cors.adoc[Cross-Origin Resource Sharing (CORS)]
*** xref:policies-included-external-authorization.adoc[External Authorization]
*** xref:policies-included-external-processing.adoc[External Processing]
*** xref:policies-included-header-injection.adoc[Header Injection]
*** xref:policies-included-header-removal.adoc[Header Removal]
*** xref:policies-included-health-check.adoc[Health Check]
*** xref:policies-included-http-caching.adoc[HTTP Caching]
*** xref:policies-included-ip-allowlist.adoc[IP Allowlist]
*** xref:policies-included-ip-blocklist.adoc[IP Blocklist]
*** xref:policies-included-json-threat-protection.adoc[JSON Threat Protection]
*** xref:policies-included-jwt-validation.adoc[JWT Validation]
*** xref:policies-included-message-logging.adoc[Message Logging]
*** xref:policies-included-oauth-token-introspection.adoc[OAuth 2.0 Token Introspection]
*** xref:policies-included-openid-token-enforcement.adoc[OpenID Connect OAuth 2.0 Token Enforcement]
*** xref:policies-included-rate-limiting.adoc[Rate Limiting]
*** xref:policies-included-rate-limiting-sla.adoc[Rate Limiting: SLA-Based]
*** xref:policies-included-schema-validation.adoc[Schema Validation]
*** xref:policies-included-spike-control.adoc[Spike Control]
*** xref:policies-included-traffic-management-route.adoc[Traffic Management for Multiple Upstream Services]
*** xref:policies-included-traffic-management.adoc[Traffic Management for Multiple Upstream Services (Weighted)]
*** xref:policies-included-tls.adoc[Transport Layer Security (TLS) - Inbound]
*** xref:policies-included-tls-outbound.adoc[Transport Layer Security (TLS) - Outbound]
** xref:policies-outbound-policies.adoc[]
** xref:policies-custom-overview.adoc[]
*** xref:policies-custom-flex-implement-rust.adoc[]
*** xref:policies-custom-flex-getting-started.adoc[]
** xref:policies-automated-overview.adoc[]
*** xref:policies-automated-applying.adoc[Apply an Automated Policy]
** xref:policies-resource-level-overview.adoc[]
** xref:flex-gateway-secure-conn.adoc[]
*** xref:policies-included-apply.adoc[Apply a Policy in Connected Mode]
** xref:flex-gateway-secure-local.adoc[]
*** xref:flex-local-secure-api-with-basic-auth-policy.adoc[With Basic Authentication and Rate Limiting]
*** xref:flex-local-secure-api-with-auto-policy.adoc[With an Automated Resource-Level Policy]
*** xref:flex-local-deploy-custom-policy.adoc[With a Custom Policy]
** xref:policies-reorder.adoc[]
** xref:policies-flex-dataweave-support.adoc[DataWeave Support]
* xref:flex-gateway-monitor.adoc[Monitoring Flex Gateway]
** xref:flex-conn-monitor.adoc[Monitoring in Connected Mode]
*** xref:flex-conn-message-log.adoc[Configure Message Logging]
*** xref:flex-use-api-alerts.adoc[Configure API Alerts]
*** xref:flex-conn-third-party-logs-config.adoc[Configure Logs for Third-Party Services]
*** xref:flex-view-api-metrics.adoc[View Key Metrics for Flex Gateway APIs]
*** xref:flex-view-replica-status.adoc[View the Replica Status in Runtime Manager]
*** xref:flex-view-api-status.adoc[View the API Status in Runtime Manager]
*** xref:flex-view-logs-in-runtime-manager.adoc[View Runtime Logs in Runtime Manager]
*** xref:flex-view-logs-in-monitoring.adoc[View Runtime and Access Logs in Anypoint Monitoring]
*** xref:flex-conn-disable-logs.adoc[Disable Log Output to Anypoint Platform]
** xref:flex-local-monitor.adoc[Monitoring in Local Mode]
*** xref:flex-local-third-party-logs-config.adoc[Configure External Logs for Flex Gateway in Local Mode]
*** xref:flex-local-view-logs.adoc[View Standard Output Logs]
* xref:flex-gateway-manage.adoc[]
** xref:flex-gateway-upgrade.adoc[Upgrade Flex Gateway]
** xref:flex-gateway-delete.adoc[Delete an Instance of Flex Gateway]
** xref:flex-gateway-uninstall.adoc[Uninstall Flex Gateway]
** xref:flex-gateway-k8-management.adoc[]
*** xref:flex-gateway-k8-change-helm-settings.adoc[Update a Helm Chart]
*** xref:flex-gateway-k8-high-availability.adoc[Autoscale and Add Replicas to a Namespace]
*** xref:flex-gateway-k8-node-affinity-config.adoc[Configure Node Affinity]
*** xref:flex-gateway-k8-external-dns.adoc[Provide a Domain Name]
*** xref:flex-gateway-k8-ingress-class.adoc[Configure an IngressClass Resource]
*** xref:flex-gateway-istio.adoc[Integrate Flex Gateway with Istio Service Mesh]
** xref:flex-gateway-renew-certificate.adoc[Renew Flex Gateway Registration]
* xref:flex-troubleshoot.adoc[Troubleshooting]
** xref:flex-troubleshoot-debug-logs.adoc[Troubleshoot with Debug Logs]
** xref:flex-troubleshoot-reg.adoc[Troubleshoot Registration Issues]
** xref:flex-troubleshoot-linux-permissions.adoc[Troubleshoot Linux Permissions]
** xref:flex-troubleshoot-platform-connection.adoc[Troubleshoot Platform Connections]
** xref:flex-troubleshoot-logging.adoc[Troubleshoot Logging Issues]
** xref:flex-troubleshoot-linux-services.adoc[Troubleshoot Linux Services]
** xref:flex-troubleshoot-admin-api.adoc[Troubleshoot with the CLI]
** xref:flex-troubleshoot-soap-apis.adoc[Troubleshoot SOAP APIs]
** xref:flex-troubleshoot-requests.adoc[Troubleshoot Request Connection]
** xref:flex-troubleshoot-docker.adoc[]
** xref:flex-troubleshoot-helm.adoc[]
** xref:flex-troubleshoot-regex.adoc[]
