gateway/1.9/modules/ROOT/nav.adoc
// Overview

* xref:index.adoc[Overview]
** xref:flex-review-prerequisites.adoc[Requirements and Limits]
** xref:flex-sizing-guide.adoc[Resource Sizing]
** xref:flex-security-best-practices.adoc[Self-Managed Flex Gateway Security Best Practices]

// Release Notes

* xref:flex-gateway-release-notes.adoc[Release Notes]

// Flex Gateway 
* xref:flex-architecture-overview.adoc[Flex Gateway Reference Architecture]
** xref:flex-architecture-basic-deployments.adoc[Flex Gateway Deployment Models]
** xref:flex-architecture-uc-overview.adoc[Integration Use Cases]
*** xref:flex-architecture-uc1.adoc[Use Case 1: Organization-Owned API Exposed to an Organization-Owned API Consumer]
*** xref:flex-architecture-uc2.adoc[Use Case 2: Organization-Owned API Exposed to a Non-Organization-Owned API Consumer]
*** xref:flex-architecture-uc3.adoc[Use Case 3: Non-Organization-Owned API Exposed to an Organization-Owned API Consumer]
*** xref:flex-architecture-uc4.adoc[Use Case 4: Non-Organization-Owned API Exposed to a Non-Organization-Owned API Consumer]
** xref:flex-architecture-multi-region.adoc[Flex Gateway Multiple Region Deployments]
** xref:flex-architecture-shared-storage.adoc[Shared Storage Models]
* xref:flex-gateway-getting-started-overview.adoc[Getting Started with Flex Gateway]
** xref:flex-gateway-managed-getting-started.adoc[Getting Started with Managed Flex Gateway on CloudHub 2.0]
** xref:flex-gateway-getting-started.adoc[Getting Started with Self-Managed Flex Gateway]
** xref:flex-gateway-k8-getting-started.adoc[Getting Started with Self-Managed Flex Gateway in a Kubernetes Cluster]

// Deploy a Managed Flex Gateway to CloudHub 2.0
* xref:flex-gateway-managed-set-up.adoc[Deploy a Managed Flex Gateway to CloudHub 2.0]

// Setting Up Self-Managed Flex Gateway
* xref:flex-gateway-set-up.adoc[Setting Up Self-Managed Flex Gateway]
** xref:flex-install.adoc[Download Flex Gateway]
** xref:flex-conn-reg-run.adoc[Register and Run in Connected Mode]
*** xref:flex-conn-reg-run-up.adoc[With a Username and Password]
*** xref:flex-conn-reg-run-app.adoc[With a Connected App]
*** xref:flex-conn-reg-run-token.adoc[With a Token]
** xref:flex-local-reg-run.adoc[Register and Run in Local Mode]
*** xref:flex-local-reg-run-up.adoc[With a Username and Password]
*** xref:flex-local-reg-run-app.adoc[With a Connected App]
*** xref:flex-local-reg-run-token.adoc[With a Token]

// Configuring Flex Gateway
* xref:flex-gateway-configure.adoc[Configuring Flex Gateway]
** xref:flex-managed-configure.adoc[Configuring Managed Flex Gateway]
*** xref:flex-managed-inbound-tls-config.adoc[Configuring Inbound TLS for Managed Flex Gateway]
*** xref:flex-managed-outbound-tls-config.adoc[Configuring Outbound TLS for Managed Flex Gateway]
** xref:flex-conn-configure.adoc[Configuring Flex Gateway in Connected Mode]
*** xref:flex-conn-rep-run.adoc[Configure Replicas]
*** xref:flex-conn-tls-config.adoc[Configure TLS Context]
*** xref:flex-conn-shared-storage-config.adoc[Configure Shared Storage]
*** xref:flex-conn-replica-caching.adoc[Configure Flex Gateway Configuration Caching]
*** xref:flex-conn-forward-proxy.adoc[Configure a Forward Proxy]
*** xref:flex-conn-timeout.adoc[Configure Timeouts]
*** xref:flex-conn-manage-public-api.adoc[Configure with the API Manager API Tool]
*** xref:flex-conn-readiness-liveness.adoc[Configure a Readiness or Liveness Probe]
*** xref:flex-conn-proxy-protocol.adoc[Configure PROXY Protocol]
*** xref:flex-conn-jenkins-api.adoc[Automate Flex Gateway with a Jenkins Pipeline using the API Manager API]
*** xref:flex-conn-jenkins-cli.adoc[Automate Flex Gateway with a Jenkins Pipeline using Anypoint CLI]
** xref:flex-local-configure.adoc[Configuring Flex Gateway in Local Mode]
*** xref:flex-local-rep-run.adoc[Configure Replicas]
*** xref:flex-local-tls-config.adoc[Configure TLS Context]
*** xref:flex-local-shared-storage-config.adoc[Configure Shared Storage]
*** xref:flex-local-forward-proxy.adoc[Configure a Forward Proxy]
*** xref:flex-local-timeout.adoc[Configure Timeouts]
*** xref:flex-local-readiness-liveness.adoc[Configure a Readiness or Liveness Probe]
*** xref:flex-local-proxy-protocol.adoc[Configure PROXY Protocol]
*** xref:flex-local-configuration-reference-guide.adoc[Declarative Configuration Reference]

// Publishing Flex Gateway APIs
* xref:flex-gateway-publish-apis.adoc[Publishing Flex Gateway APIs]
** xref:flex-gateway-publish-apis-conn.adoc[Publishing Managed Gateway and Connected Mode APIs]
** xref:flex-gateway-publish-apis-local.adoc[Publishing Local Mode APIs]
*** xref:flex-local-publish-simple-api.adoc[Publish a Simple API]
*** xref:flex-local-publish-api-multiple-services.adoc[Publish an API with Multiple Upstream Services]

// Securing and Governing Flex Gateway APIs
* xref:flex-gateway-secure-apis.adoc[Securing and Governing Flex Gateway APIs]
** xref:policies-included-directory.adoc[Inbound Policies Directory]
*** xref:policies-included-basic-auth-ldap.adoc[Basic Authentication: LDAP]
*** xref:policies-included-basic-auth-simple.adoc[Basic Authentication: Simple]
*** xref:policies-included-client-id-enforcement.adoc[Client ID Enforcement]
*** xref:policies-included-cors.adoc[Cross-Origin Resource Sharing (CORS)]
*** xref:policies-included-external-authorization.adoc[External Authorization]
*** xref:policies-included-external-processing.adoc[External Processing]
*** xref:policies-included-header-injection.adoc[Header Injection]
*** xref:policies-included-header-removal.adoc[Header Removal]
*** xref:policies-included-health-check.adoc[Health Check]
*** xref:policies-included-http-caching.adoc[HTTP Caching]
*** xref:policies-included-ip-allowlist.adoc[IP Allowlist]
*** xref:policies-included-ip-blocklist.adoc[IP Blocklist]
*** xref:policies-included-json-threat-protection.adoc[JSON Threat Protection]
*** xref:policies-included-jwt-validation.adoc[JWT Validation]
*** xref:policies-included-message-logging.adoc[Message Logging]
*** xref:policies-included-oauth-token-introspection.adoc[OAuth 2.0 Token Introspection]
*** xref:policies-included-openid-token-enforcement.adoc[OpenID Connect OAuth 2.0 Token Enforcement]
*** xref:policies-included-rate-limiting.adoc[Rate Limiting]
*** xref:policies-included-rate-limiting-sla.adoc[Rate Limiting: SLA-Based]
*** xref:policies-included-response-timeout.adoc[Response Timeout]
*** xref:policies-included-schema-validation.adoc[Schema Validation]
*** xref:policies-included-spike-control.adoc[Spike Control]
*** xref:policies-included-stream-idle-timeout.adoc[Stream Idle Timeout]
*** xref:policies-included-traffic-management-route.adoc[Traffic Management for Multiple Upstream Services]
*** xref:policies-included-traffic-management.adoc[Traffic Management for Multiple Upstream Services (Weighted)]
*** xref:policies-included-tls.adoc[Transport Layer Security (TLS) - Inbound]
*** xref:policies-included-tls-outbound.adoc[Transport Layer Security (TLS) - Outbound]
** xref:policies-outbound-directory.adoc[Outbound Policies Directory]
*** xref:policies-outbound-aws-lambda.adoc[AWS Lambda]
*** xref:policies-outbound-basic-auth.adoc[Credential Injection Basic Authentication]
*** xref:policies-outbound-oauth.adoc[Credential Injection OAuth 2.0]
*** xref:policies-outbound-circuit-breaker.adoc[Circuit Breaker Policy]
*** xref:policies-outbound-upstream-idle-timeout.adoc[Upstream Idle Timeout]
** xref:policies-custom-overview.adoc[Custom Policies]
*** xref:policies-custom-flex-implement-rust.adoc[Implement a Flex Gateway Custom Policy in Rust]
*** xref:policies-custom-flex-getting-started.adoc[Publish a Flex Gateway Custom Policy]
** xref:policies-automated-overview.adoc[Automated Policies]
*** xref:policies-automated-applying.adoc[Apply an Automated Inbound Policy]
** xref:policies-resource-level-overview.adoc[Resource-Level Policies]
** xref:flex-gateway-secure-conn.adoc[Applying Policies for Managed Flex Gateways and Connected Mode]
** xref:flex-gateway-secure-local.adoc[Applying Policies in Local Mode]
*** xref:flex-local-secure-api-with-basic-auth-policy.adoc[With Basic Authentication and Rate Limiting]
*** xref:flex-local-secure-api-with-auto-policy.adoc[With an Automated Resource-Level Policy]
*** xref:flex-local-deploy-custom-policy.adoc[With a Custom Policy]
** xref:policies-reorder.adoc[Ordering Policies]
** xref:policies-flex-dataweave-support.adoc[DataWeave Support]

// Monitoring Flex Gateway
* xref:flex-gateway-monitor.adoc[Monitoring Flex Gateway]
** xref:flex-managed-monitor.adoc[Managed Flex Gateway]
*** xref:flex-managed-view-status.adoc[Monitor Managed Flex Gateway]
*** xref:flex-managed-message-log.adoc[Configure Message Logging]
*** xref:flex-managed-view-api-metrics.adoc[View Key Metrics for Flex Gateway APIs]
*** xref:flex-managed-view-api-status.adoc[Viewing API Status in Runtime Manager]
*** xref:flex-managed-view-logs-in-runtime-manager.adoc[Viewing Runtime Logs in Runtime Manager]
** xref:flex-conn-monitor.adoc[Self-Managed Connected Mode]
*** xref:flex-conn-message-log.adoc[Configure Message Logging]
*** xref:flex-use-api-alerts.adoc[Configure API Alerts]
*** xref:flex-conn-third-party-logs-config.adoc[Configure Logs for Third-Party Services]
*** xref:flex-conn-view-api-metrics.adoc[View Key Metrics for Flex Gateway APIs]
*** xref:flex-view-replica-status.adoc[View the Replica Status in Runtime Manager]
*** xref:flex-conn-view-api-status.adoc[View the API Status in Runtime Manager]
*** xref:flex-view-logs-in-runtime-manager.adoc[View Runtime Logs in Runtime Manager]
*** xref:flex-view-logs-in-monitoring.adoc[View Runtime and Access Logs in Anypoint Monitoring]
*** xref:flex-conn-disable-logs.adoc[Disable Log Output to Anypoint Platform]
** xref:flex-local-monitor.adoc[Self-Managed Local Mode]
*** xref:flex-local-third-party-logs-config.adoc[Configure External Logs for Flex Gateway in Local Mode]
*** xref:flex-local-view-logs.adoc[View Standard Output Logs]

// Managing Kubernetes Deployments
* xref:flex-gateway-k8-management.adoc[Managing Kubernetes Deployments]
** xref:flex-gateway-k8-change-helm-settings.adoc[Update a Helm Chart]
** xref:flex-gateway-k8-high-availability.adoc[Autoscale and Add Replicas to a Namespace]
** xref:flex-gateway-k8-node-affinity-config.adoc[Configure Node Affinity]
** xref:flex-gateway-k8-external-dns.adoc[Provide a Domain Name]
** xref:flex-gateway-k8-ingress-class.adoc[Configure an IngressClass Resource]
** xref:flex-gateway-istio.adoc[Integrate Flex Gateway with Istio Service Mesh]

// Upgrading and Maintaining Flex Gateway
* xref:flex-gateway-maintain.adoc[Upgrading and Maintaining Flex Gateway]
** xref:flex-gateway-version-lifecycle.adoc[Flex Gateway Version Lifecycle]
** Managed Flex Gateway
*** xref:flex-gateway-managed-upgrade-delete.adoc[Upgrade or Delete Managed Flex Gateway]
** Self-Managed Flex Gateway
*** xref:flex-gateway-upgrade.adoc[Upgrade Self-Managed Flex Gateway]
*** xref:flex-gateway-delete.adoc[Delete an Instance of Flex Gateway]
*** xref:flex-gateway-uninstall.adoc[Uninstall Flex Gateway]
*** xref:flex-gateway-renew-certificate.adoc[Renew Flex Gateway Registration]

// Troubleshooting
* xref:flex-troubleshoot.adoc[Troubleshooting Flex Gateway]
** Managed Flex Gateway
*** xref:flex-troubleshoot-managed-creation.adoc[Gateway Creation]
*** xref:flex-troubleshoot-managed-maintenance.adoc[Gateway Maintinenance]
** Self-Managed Flex Gateway
*** xref:flex-troubleshoot-debug-logs.adoc[Using Debug Logs]
*** xref:flex-troubleshoot-reg.adoc[Registration]
*** xref:flex-troubleshoot-linux-permissions.adoc[Linux Permissions]
*** xref:flex-troubleshoot-platform-connection.adoc[Platform Connections]
*** xref:flex-troubleshoot-logging.adoc[Logging]
*** xref:flex-troubleshoot-linux-services.adoc[Linux Services]
*** xref:flex-troubleshoot-admin-api.adoc[Using the CLI]
*** xref:flex-troubleshoot-soap-apis.adoc[SOAP APIs]
*** xref:flex-troubleshoot-requests.adoc[Request Connection]
*** xref:flex-troubleshoot-docker.adoc[Docker Command]
*** xref:flex-troubleshoot-helm.adoc[Helm Command]
*** xref:flex-troubleshoot-regex.adoc[Regular Expressions Compatibility]
